--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -37,3 +37,8 @@
   height: 100%;
   object-fit: cover;
 }
+
+@mixin grid-temp {
+  display: grid;
+  grid-gap: 50px;
+}
